crates/biome_cli/tests/snapshots/main_commands_check/unsupported_file_verbose.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --verbose check.txt
```

## `check.txt`

```txt
for(;true;);

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - check.txt
  


```

# Emitted Messages

```block
check.txt files/missingHandler  VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Biome could not determine the language for the file extension txt
  
  Verbose advice
  
    i If you want to turn off this diagnostic, consider using --files-ignore-unknown from the CLI, or files.ignoreUnknown from the configuration file.
    

```

```block
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Files processed:
  
  ! The list is empty.
  

```

```block
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Files fixed:
  
  ! The list is empty.
  

```

```block
Scanned project folder in <TIME>.
Checked 0 files in <TIME>. No fixes applied.
Found 1 warning.
```
