crates/biome_cli/tests/snapshots/main_commands_check/upgrade_severity.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check file.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": true,
      "style": {
        "noNegationElse": "error"
      }
    }
  }
}
```

## `file.js`

```js
if(!cond) { exprA(); } else { exprB() }
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
biome.json:2:13 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
     1 │ {
   > 2 │   "linter": {
       │             ^
   > 3 │     "rules": {
   > 4 │         "recommended": true,
   > 5 │         "style": {
   > 6 │             "noNegationElse": "error"
   > 7 │         }
   > 8 │     }
   > 9 │   }
       │   ^
    10 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
file.js:1:1 lint/style/noNegationElse  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invert blocks when performing a negation test.
  
  > 1 │ if(!cond) { exprA(); } else { exprB() }
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  
  i Safe fix: Invert the condition and the blocks.
  
  - if(!cond)·{·exprA();·}·else·{·exprB()·}
  + if(cond)·{·exprB()·}·else·{·exprA();·}
  

```

```block
file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - if(!cond)·{·exprA();·}·else·{·exprB()·}
      1 │ + if·(!cond)·{
      2 │ + → exprA();
      3 │ + }·else·{
      4 │ + → exprB();
      5 │ + }
      6 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
