crates/biome_cli/tests/snapshots/main_commands_check/use_literal_keys_should_emit_correct_ast_issue_266.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe fix.js
```

## `fix.js`

```js
value.optimizelyService = optimizelyService;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
