crates/biome_cli/tests/snapshots/main_commands_check/write_unsafe_ok.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe fix.js
```

## `fix.js`

```js
1 >= 0;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
